feat: proguard 설정
- 코드 난독화
- API 은닉 숨김처리

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,8 +18,17 @@ android {
     }
 
     buildTypes {
+        debug {
+            //런타임에 필요하지 않거나 사용되지 않는 코드 삭제
+            //앱의 크기를 줄일 수 있음
+            minifyEnabled true
+
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+
         release {
-            minifyEnabled false
+            minifyEnabled true
+
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
