--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -1,6 +1,9 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -8,7 +11,6 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.starFaceFinder.domain"
         minSdk 24
         targetSdk 33
         versionCode 1
@@ -34,10 +36,16 @@ android {
 
 dependencies {
 
+    implementation(project(":data"))
+
     implementation 'androidx.core:core-ktx:1.8.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation project(path: ':data')
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+    implementation 'com.google.dagger:hilt-android:2.44'
+    kapt 'com.google.dagger:hilt-android-compiler:2.44'
 }
