--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,7 +73,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.6.0"
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
-
+    implementation "com.airbnb.android:lottie:6.0.0"
 }
 
 kapt {
