--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,9 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dataBinding {
+        enabled = true
+    }
 }
 
 dependencies {
@@ -74,6 +77,7 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation "com.airbnb.android:lottie:6.0.0"
+
 }
 
 kapt {
