--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,6 +78,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     implementation "com.airbnb.android:lottie:6.0.0"
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 }
 
 kapt {
