--- a/data/build.gradle
+++ b/data/build.gradle
@@ -68,9 +68,12 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_version"
 
     // To use Kotlin annotation processing tool (kapt)
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 }
 
 kapt {
