--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,6 +85,11 @@ dependencies {
     implementation(platform("com.google.firebase:firebase-bom:32.2.2"))
     implementation("com.google.firebase:firebase-analytics-ktx")
     implementation("com.google.firebase:firebase-crashlytics-ktx")
+    implementation("com.google.firebase:firebase-messaging-ktx")
+
+    implementation "androidx.work:work-runtime-ktx:2.8.0"
+
+    implementation "com.kakao.sdk:v2-share:2.15.0" // 메시지(카카오톡 공유)
 }
 
 kapt {
