--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
                 <data android:host="kakaolink"
                     android:scheme="kakaoce657d783b6b9e9df95bc640f5f92f6a" />
             </intent-filter>
+
+            <nav-graph android:value="@navigation/nav_graph" />
         </activity>
 
         <service
