--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,6 +90,9 @@ dependencies {
     implementation "androidx.work:work-runtime-ktx:2.8.0"
 
     implementation "com.kakao.sdk:v2-share:2.15.0" // 메시지(카카오톡 공유)
+
+    implementation "androidx.paging:paging-runtime:3.1.1"
+
 }
 
 kapt {
