--- a/data/build.gradle
+++ b/data/build.gradle
@@ -79,6 +79,8 @@ dependencies {
 
     implementation  "androidx.datastore:datastore-core:1.0.0"
     implementation  "com.google.protobuf:protobuf-javalite:3.24.0"
+
+    implementation "androidx.paging:paging-runtime:3.2.0"
 }
 
 
