--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -48,4 +48,5 @@ dependencies {
 
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt 'com.google.dagger:hilt-android-compiler:2.44'
+    implementation "androidx.paging:paging-runtime:3.2.0"
 }
