--- a/data/build.gradle
+++ b/data/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'kotlin-kapt'
     id 'org.jetbrains.kotlin.android'
     id 'com.google.dagger.hilt.android'
-    id "com.google.protobuf" version "0.8.17"
+    id "com.google.protobuf" version '0.9.0'
 }
 
 android {
@@ -14,8 +14,6 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
