--- a/domain/build.gradle
+++ b/domain/build.gradle
@@ -46,4 +46,8 @@ dependencies {
 
     implementation 'com.google.dagger:hilt-android:2.44'
     kapt 'com.google.dagger:hilt-android-compiler:2.44'
+
+    def paging_version = "3.1.1"
+
+    implementation "androidx.paging:paging-runtime:$paging_version"
 }
