--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
 dependencies {
     implementation(project(":domain"))
     implementation(project(":data"))
+    androidTestImplementation project(path: ':testing')
 
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1"
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
